crates/fig-lexer/tests/snapshots/integration_tests__edge_cases__while_no_body.snap
---
source: crates/fig-lexer/tests/integration_tests.rs
expression: tokens
---
- Func
- Ident: no_body_while
- LParen
- RParen
- Arrow
- OkLiteral
- Newline
- Indent
- While
- "True"
- Newline
- Dedent
